paginator, new table, update users req

--- a/src/components/Charts/Charts.module.scss
+++ b/src/components/Charts/Charts.module.scss
@@ -20,6 +20,7 @@
         font-weight: bold;
     }
     &__footer {
+        margin-top: 150px;
         grid-row-start: 3;
         grid-row-end: 4;
     }
